Wip: travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - docker pull quay.io/tiramisu/mr.docs
 
 script:
-  - docker run -it --rm -v ${PWD}/:/build/app:rw -v ${PWD}/docs:/build/docs -u $(id -u):$(id -g) --name ci-test quay.io/tiramisu/mr.ci
-  - bash tests.sh
+  - docker run -it --rm -v ${PWD}/:/build/app:rw -v ${PWD}/docs:/build/docs -u $(id -u):$(id -g) --name ci-test quay.io/tiramisu/mr.docs
+  - bash checks/run_checks.sh
